// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ShareButtons Snapshots should match snapshot with apartment property 1`] = `
<div
  class="flex gap-1 justify-center mr-2"
>
  <button
    data-hashtag="#ApartmentForRent"
    data-testid="facebook-share"
    data-url="https://test-domain.com/properties/mock-apartment-id"
  >
    <div
      data-round="true"
      data-size="20"
      data-testid="facebook-icon"
    />
  </button>
  <button
    data-hashtags="ApartmentForRent"
    data-testid="twitter-share"
    data-url="https://test-domain.com/properties/mock-apartment-id"
  >
    <div
      data-round="true"
      data-size="20"
      data-testid="twitter-icon"
    />
  </button>
  <button
    data-testid="linkedin-share"
    data-url="https://test-domain.com/properties/mock-apartment-id"
  >
    <div
      data-round="true"
      data-size="20"
      data-testid="linkedin-icon"
    />
  </button>
</div>
`;

exports[`ShareButtons Snapshots should match snapshot with multi-word property type 1`] = `
<div
  class="flex gap-1 justify-center mr-2"
>
  <button
    data-hashtag="#StudioApartmentForRent"
    data-testid="facebook-share"
    data-url="https://test-domain.com/properties/mock-studio-id"
  >
    <div
      data-round="true"
      data-size="20"
      data-testid="facebook-icon"
    />
  </button>
  <button
    data-hashtags="StudioApartmentForRent"
    data-testid="twitter-share"
    data-url="https://test-domain.com/properties/mock-studio-id"
  >
    <div
      data-round="true"
      data-size="20"
      data-testid="twitter-icon"
    />
  </button>
  <button
    data-testid="linkedin-share"
    data-url="https://test-domain.com/properties/mock-studio-id"
  >
    <div
      data-round="true"
      data-size="20"
      data-testid="linkedin-icon"
    />
  </button>
</div>
`;
